<resources>
    <string name="app_name">SvyU</string>
    <string name="welcome_jumbo">Welcome</string>
    <string name="welcome_secondary">Take part in our survey!</string>
    <string name="welcome_attn_title">Before we start, here are things you should know:</string>
    <string name="welcome_attn_0">- Please be honest when making your choice.</string>
    <string name="welcome_attn_1">- We are just doing a research so you don\'t have to fake your information.</string>
    <string name="welcome_attn_2">- Please follow the step we designed for you and don\'t skip any questions.</string>
    <string name="initPermExplain">- We will need to use your camera to scan a QR code.
        We also need phone and location permission to anonymously identify you.
        Please grant these permissions to help the survey.</string>
    <string name="welcome_start">Accept and start</string>
    <string name="next">Next</string>
    <string name="final_jumbo">Thank you</string>
    <string name="final_secondary">for your answers!</string>
    <string name="finish">Submit</string>
    <string name="questionHeader">Question %1$d</string>
    <string name="cacheFailed">Failed to save your response.</string>
    <string name="qrPrompt">Scan the code for the survey</string>
    <string name="surveyNotFound">Sorry, survey not found.</string>
    <string name="connectFail">Unable to connect to the internet. Please check and try again.</string>
    <string name="unsupportedVersion">This survey uses features not available in this version of the app. Please update the app.</string>
    <string name="unexpectedSurveyJson">There\'s a problem connecting to the service. Please check your connection or contact support.</string>
    <string name="unexpectedResponseError">Something unexpected happened sending your answers. Please contact support.</string>
    <string name="permRequired">Permission required</string>
    <string name="phoneIdPermReason">We need phone status permission to anonymously identify you.</string>
    <string name="locationPermReason">We need location permission to anonymously identify you.</string>
    <string name="internetPermReason">We need Internet permission to get surveys and send your results.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="internetPermRequired">We need Internet permission to send and receive request.\nPlease grant this permission.</string>
    <string name="cameraPermRequired">Please grant camera permission so we can scan a QR code.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lockDevice">Lock device after completing survey</string>
    <string name="deviceAdminDisable">Device Admin permission revoked. We will not be able to lock your phone after survey completion.</string>
    <string name="deviceAdminDisabledTip">This option is not available because Device Admin is disabled.</string>
    <string name="enable">Enable</string>
    <string name="deviceAdminReason">Enable Device Admin so we can lock the phone after survey completion.</string>
    <string name="deviceAdminDescription">Enables device locking after completing survey.</string>
    <string name="thanksToast">Thank you for your participation.</string>
    <string name="surveyProgressText">%1$d of %2$d</string>
    <string name="textResponseHint">Answer here…</string>
    <string name="workOffline">Work offline</string>
    <string name="workOfflineHintOnline">New survey results will be sent to the cloud. Press the button to send existing offline results to the cloud.</string>
    <string name="workOfflineHintOffline">You can only access the survey you last filled out. New results will be saved locally. Switch off to send results to the cloud.</string>
    <string name="sync">Sync</string>
    <string name="unexpectedSyncError">There\'s a problem connecting to the service. Please check your connection or contact support.</string>
    <string name="syncSuccess">%1$d results synced. You\'re all set!</string>
    <string name="noResultSynced">All results synced. You\'re all set!</string>
    <string name="newSurvey">New survey</string>
    <string name="composerTitle">Composer</string>
    <string name="submitHint">Tap the button to submit your answers. \n\nGrant all requested permissions so we can identify you without knowing your personal information.</string>
    <string name="singleChoiceQuestionDescription">Single answer, %1$d options</string>
    <string name="singleChoiceQuestionEmptyDescription">Single answer, tap to add options</string>
    <string name="multiChoiceQuestionDescription">Multiple answers, %1$d options</string>
    <string name="multiChoiceQuestionEmptyDescription">Multiple answers, tap to add options</string>
    <string name="textQuestionDescription">Free input</string>
    <string name="starRateQuestionDescription">Rating</string>
    <string name="questionPlaceholder">(Your question…)</string>
    <string name="singleChoiceQuestionAdd">Single answer</string>
    <string name="multiChoiceQuestionAdd">Multiple answers</string>
    <string name="textQuestionAdd">Free input</string>
    <string name="starRateQuestionAdd">Rating</string>
    <string name="questionHint">Question here…</string>
    <string name="textQuestionExplain">Survey takers can answer as they wish.</string>
    <string name="starRateQuestionExplain">Survey takers rate on a scale of 0.5 to 5.</string>
    <string name="options">Options</string>
    <string name="composerNoQuestions">Let\'s add some questions!</string>
    <string name="add">Add</string>
    <string name="questionRemoveHint">Question removed.</string>
    <string name="undo">Undo</string>
    <string name="composerNoOptions">No options here yet.</string>
    <string name="optionEditHint">Option here…</string>
    <string name="cancelSurvey">Give up</string>
    <string name="cancelSurveyConfirm">You have already answered half of the questions. Really want to give up?</string>
    <string name="cancelSurveyOk">Give up</string>
    <string name="cancelSurveyCancel">Continue answering</string>
    <string name="composerUpload">Upload survey</string>
    <string name="surveyEmptyError">Survey is empty. Add some questions first?</string>
    <string name="surveyQuestionInvalidError">Some questions are not right. Try fixing them first.</string>
    <string name="surveyUploadOfflineError">You are working offline. Turn it off in settings to upload.</string>
    <string name="surveyUploadActivityTitle">Your new survey</string>
    <string name="surveyUploadCompleteTitle">Your survey is ready</string>
    <string name="surveyUploadCompleteText">Use this QR code to conduct survey. You may want to save the code now.</string>
    <string name="finishUpload">Finish</string>
    <string name="surveyUploading">Hold on while we upload your survey…</string>
    <string name="surveyId">Survey ID: %s</string>
</resources>
