<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/appPadding">

    <!--  Start : Your code should be within this block -->

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_jumbo"
        style="@style/Header"/>
    <TextView
        android:id="@+id/welcome_subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_header"
        android:text="@string/welcome_secondary"
        style="@style/Subheader"/>

    <TextView
        android:id="@+id/welcome_attn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_subheader"
        android:layout_marginTop="@dimen/marginS"
        android:text="@string/welcome_attn_title"
        style="@style/Title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_attn_title"
        android:layout_marginTop="@dimen/marginM">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/welcome_attn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_attn_0" />
            <TextView
                android:id="@+id/welcome_attn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXS"
                android:text="@string/welcome_attn_1" />
            <TextView
                android:id="@+id/welcome_attn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXS"
                android:text="@string/welcome_attn_2" />

            <TextView
                android:id="@+id/welcome_attn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginXS"
                android:text="@string/initPermExplain" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/receiveProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/nextBtn"
        android:layout_margin="@dimen/marginS"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/welcome_start"
        style="@style/PrimaryButton"
        android:onClick="initScan"/>

    <!-- END    : Your code should be within this block -->
</RelativeLayout>