<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/composerQuestionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/marginM"
        android:layout_marginStart="@dimen/marginM"
        android:layout_marginLeft="@dimen/marginM"
        android:layout_marginEnd="@dimen/marginM"
        android:layout_marginRight="@dimen/marginM"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:importantForAutofill="no"
        android:hint="@string/questionHint"
        style="@style/Header"/>

    <TextView
        android:id="@+id/composerExplainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/composerQuestionInput"
        android:layout_marginTop="@dimen/marginM"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/marginMP"
        android:layout_marginLeft="@dimen/marginMP"
        android:layout_marginEnd="@dimen/marginMP"
        android:layout_marginRight="@dimen/marginMP"
        style="@style/Title"
        android:text="@string/textQuestionAdd"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/composerExplainTitle"
        android:layout_marginTop="@dimen/marginXXS"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/marginMP"
        android:layout_marginLeft="@dimen/marginMP"
        android:layout_marginEnd="@dimen/marginMP"
        android:layout_marginRight="@dimen/marginMP"
        android:text="@string/textQuestionExplain"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/composerConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/fabPadding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_tick"/>

</androidx.constraintlayout.widget.ConstraintLayout>